TEMP: start adding validation
